# musicvision

./: .env.example  .gitignore  CLA.md  CLAUDE.md  CONTRIBUTING.md  FIXLOG.md  LICENSE  LICENSE-COMMERCIAL  LICENSE-UPDATE-INSTRUCTIONS.md  MUSICVISION_GPU_TEST.md  README.md  STATUS.md  THIRD-PARTY-NOTICES.md  pyproject.toml  pyproject.toml.MAC  setup_env.sh  vendor-LICENSE.md
docs/: CLOUD_DEPLOYMENT_SPEC.md  CLOUD_SUPPORT_PLAN.md  HUMO_REFERENCE.md  LIP_SYNC_POST.md  LTX_AUDIO_MIXING_SPEC.md  MAC_SUPPORT_PLAN.md  OOM_RESILIENCE_PLAN.md  PIPELINE_SPEC.md  PLATFORM_SUPPORT_PLAN.md  PREVIEW_PLAYBACK_SPEC.md  PROJECT_INSTRUCTIONS.txt  SCENE_TRANSITIONS_SPEC.md  SIGMA_SHIFT_GUIDE.md  STATUS.md  TESTING.md  TIMELINE_EDITOR_SPEC.md  future_plans.md  instruct.md  instruction.md  musicvision_oom2026-03-03.txt  status_update.md  video-driver-crash-2026-03-03.txt  video_humo_tg.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: AudioPlayer.tsx  FileBrowser.tsx  LyricsLineEditor.tsx  OutputViewer.tsx  PipelineBar.tsx  PreviewPanel.tsx  ProjectHeader.tsx  ProjectOpener.tsx  SceneCard.tsx  SceneGrid.tsx  SceneRow.tsx  Storyboard.tsx  WaveformEditor.tsx
frontend/src/hooks/: usePipeline.ts  useProject.ts  useScenes.ts
scripts/: compare_zero_vae.py  dump_keys.py  hva_server.py  hva_wrapper.py  seedvr2_wrapper.py  start.ps1  start.sh  test_gpu_pipeline.py  test_humo_480p.py  test_humo_720p.py  test_humo_inference.py  test_hva_standalone.py  test_image_gen.py  test_vllm_prompts.py
src/musicvision/: __init__.py  cli.py  engine_registry.py  llm.py  models.py  project.py
src/musicvision/api/: app.py
src/musicvision/assembly/: concatenator.py  exporter.py  timecode.py
src/musicvision/imaging/: __init__.py  base.py  factory.py  flux_engine.py  prompt_generator.py  zimage_engine.py
src/musicvision/intake/: audio_analysis.py  pipeline.py  segmentation.py  transcription.py
src/musicvision/upscaling/: __init__.py  base.py  factory.py  ltx_spatial_engine.py  pipeline.py  realesrgan_engine.py  seedvr2_engine.py
src/musicvision/utils/: audio.py  gpu.py  paths.py  video.py
src/musicvision/video/: __init__.py  audio_encoder.py  base.py  block_swap.py  factory.py  humo_engine.py  hunyuan_avatar_engine.py  ltx_video_engine.py  model_loader.py  prompt_generator.py  scheduler.py  wan_model.py  wan_t5.py  wan_vae.py  weight_registry.py
tests/: e1938a5d-1428-932e-703e-7edab293a348.json  e8211971-ae73-e85a-877b-302e254495fe.json  test_core.py  test_engine_registry.py  test_hunyuan_avatar_engine.py  test_image_engine.py  test_intake.py  test_ltx_video_engine.py  test_oom_resilience.py  test_upscaler.py  test_video_engine.py
