[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "musicvision"
version = "0.1.0"
description = "AI music video production pipeline: song → scenes → storyboard → video"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # --- Core ---
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",           # CLI pretty-printing & progress bars
    # --- API ---
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.7",  # file uploads
    # --- Audio ---
    "librosa>=0.10",        # BPM detection, audio analysis
    "soundfile>=0.12",      # audio I/O
    # --- AI / ML (installed separately due to CUDA) ---
    # torch, torchvision, torchaudio  → install via pip with --index-url cu124
    # flash_attn==2.6.3               → install separately
    # transformers                     → for Whisper
    # diffusers                        → for FLUX
    # accelerate                       → for model offloading
    # safetensors                      → for weight loading
    # --- LLM ---
    "anthropic>=0.40",      # Claude API (cloud backend)
    "openai>=1.0",          # OpenAI-compatible client — used for local vLLM backend
    # --- Utilities ---
    "Pillow>=10.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
ml = [
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "transformers>=4.40",
    "diffusers>=0.30",
    "accelerate>=0.30",
    "safetensors>=0.4",
    "sentencepiece>=0.2",   # T5 tokenizer for HuMo/Wan
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",          # async test client for FastAPI
    "ruff>=0.4",
]

[project.scripts]
musicvision = "musicvision.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
